--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         display: inline-block;
     }
     .details .left {
-        width: 60%;
+        width: 40%;
     }
     .details .right {
         text-align: right;
-        width: 39%;
+        width: 59%;
     }
     .details .name {
         font-weight: bold;
@@ -135,21 +135,21 @@
 <div class="container">
     <div class="header">
         <div class="full-name">
-            <span class="first-name">John</span>
-            <span class="last-name">Doe</span>
+            <span class="first-name">Bazlur</span>
+            <span class="last-name">Rashid</span>
         </div>
         <div class="contact-info">
             <span class="email">Email: </span>
-            <span class="email-val">john.doe@gmail.com</span>
+            <span class="email-val">mailtobazlur@gmail.com</span>
             <span class="separator"></span>
             <span class="phone">Phone: </span>
-            <span class="phone-val">111-222-3333</span>
+            <span class="phone-val">+8801912923465</span>
         </div>
 
         <div class="about">
-            <span class="position">Front-End Developer </span>
+            <span class="position">Full Stack Software Engineer </span>
             <span class="desc">
-        I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.
+        Over the last 12+ years, I have been professionally working as a full stack web developer in software industries. I have strong professional working experience in Ruby On Rails, Laravel, Drupal, Wordpress, ReactJS, Responsive Layous, PostgreSQL
       </span>
         </div>
     </div>
@@ -159,24 +159,47 @@
             <div class="section__list">
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">KlowdBox</div>
-                        <div class="addr">San Fr, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
+                        <div class="name">NG Solutions System Limited</div>
+                        <div class="addr">Adabar, Dhaka</div>
+                        <div class="duration">June 2017 - Current</div>
                     </div>
                     <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                        <div class="name">Sr. Software Engineer</div>
+                        <div class="desc">Software Development with Ruby on Rails, Laravel, ReactJS, API development, PostgreSQL, MySQL, TDD, jQuery, GIT, Amazon Web Services (AWS), HTML5, CSS3</div>
                     </div>
                 </div>
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">Akount</div>
-                        <div class="addr">San Monica, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
+                        <div class="name">Dnet</div>
+                        <div class="addr">Mohammadpur, Dhaka</div>
+                        <div class="duration">April 2015 - May 2017</div>
                     </div>
                     <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                        <div class="name">Sr. Software Engineer</div>
+                        <div class="desc">Web application development with PHP, Laravel, Wordpress, Drupal, HTML5, CSS3</div>
+                    </div>
+                </div>
+                <div class="section__list-item">
+                    <div class="left">
+                        <div class="name">NASCENIA IT</div>
+                        <div class="addr">Lalmatia, Dhaka</div>
+                        <div class="duration">Sept 2014 - April 2015</div>
+                    </div>
+                    <div class="right">
+                        <div class="name">Sr. Software Engineer</div>
+                        <div class="desc">Software Development with Ruby on Rails, MySQL, HTML5, CSS3, Bootstrap3, jQuery</div>
+                    </div>
+                </div>
+                <div class="section__list-item">
+                    <div class="left">
+                        <div class="name">Tasawr Interactive</div>
+                        <div class="addr">Mohakhali DOHS, Dhaka</div>
+                        <div class="duration">Dec 2007 - Aug 2014</div>
+                    </div>
+                    <div class="right">
+                        <div class="name">Software Engineer</div>
+                        <div class="desc">Web Application Development with Ruby On Rails, MySQL, Drupal,
+                            Joomla, Wordpress</div>
                     </div>
                 </div>
 
@@ -186,33 +209,25 @@
             <div class="section__title">Education</div>
             <div class="section__list">
                 <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">Sample Institute of technology</div>
-                        <div class="addr">San Fr, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
-                    </div>
-                </div>
-                <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">Akount</div>
-                        <div class="addr">San Monica, CA</div>
-                        <div class="duration">Jan 2011 - Feb 2015</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Fr developer</div>
-                        <div class="desc">did This and that</div>
+                    <div class="left" style="width: 100%">
+                        <div class="name">BSc in Computer Science and Engineering</div>
+                        <div class="addr">Khulna University of Engineering & Technology, Bangladesh</div>
+                        <div class="duration">March 2003 - March 2007</div>
                     </div>
                 </div>
 
+                <div class="section__list-item">
+                    <div class="left" style="width: 100%">
+                        <div class="name">Masters in Business Administration</div>
+                        <div class="addr">University of Dhaka, Bangladesh</div>
+                        <div class="duration">Jan 2009 - Aug 2010</div>
+                    </div>
+                </div>
             </div>
 
         </div>
         <div class="section">
-            <div class="section__title">Projects</div>
+            <div class="section__title">Recent Projects</div>
             <div class="section__list">
                 <div class="section__list-item">
                     <div class="name">DSP</div>
