--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
     .details .skills__item .right input:checked + label {
         background: #79A9CE;
     }
-
+    .text {
+        text-align: justify;
+    }
 </style>
 <div class="container">
     <div class="header">
@@ -218,7 +220,7 @@
 
                 <div class="section__list-item">
                     <div class="left" style="width: 100%">
-                        <div class="name">Masters in Business Administration</div>
+                        <div class="name">MBA in Management Information Systems</div>
                         <div class="addr">University of Dhaka, Bangladesh</div>
                         <div class="duration">Jan 2009 - Aug 2010</div>
                     </div>
@@ -230,14 +232,17 @@
             <div class="section__title">Recent Projects</div>
             <div class="section__list">
                 <div class="section__list-item">
-                    <div class="name">DSP</div>
-                    <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.</div>
+                    <div class="name"><a href="https://dam.robi.com.bd" target="_blank"> Digital Asset Management</a></div>
+                    <div class="text">I led the development of a web application using Laravel for the backend and ReactJS with Redux and Saga for the frontend. My responsibilities included client interaction, designing the architecture, leading the team, and creating APIs for web and mobile platforms. I developed the frontend and managed User Acceptance Testing (UAT) to ensure compliance with all specifications and client requirements, enhancing user engagement and streamlining operations.</div>
                 </div>
 
                 <div class="section__list-item">
-                    <div class="name">DSP</div>
-                    <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. <a href="/login">link</a>
-                    </div>
+                    <div class="name"><a href="https://www.uphance.com/" target="_blank">Uphance ERP</a></div>
+                    <div class="text">As a Full Stack Ruby on Rails Developer at Uphance, a leading B2B apparel ERP on a SaaS model, I focused on fixing production bugs, adding new features, and collaborating on client-specific solutions. My expertise included Ruby on Rails 4, MySQL, jQuery, CSS3, and HTML5, helping to improve platform reliability and meet client needs efficiently.</div>
+                </div>
+                <div class="section__list-item">
+                    <div class="name"><a href="https://www.pickmybrain.world/" target="_blank">PickMyBrain.world</a></div>
+                    <div class="text">As a Full Stack Rails Developer at PickMyBrain.world, I engaged with stakeholders to understand their needs, designed and implemented solutions using Ruby on Rails, jQuery, ReactJS, and PostgreSQL. My role included designing scalable systems and databases, and integrating front and back-end components to enhance platform functionality and user experience, significantly contributing to the platform's development.</div>
                 </div>
             </div>
         </div>
