--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     }
 
     .header .contact-info {
-        margin-bottom: 20px;
+        margin-bottom: 0px;
     }
 
     .header .email,
     .header .phone {
-        color: #999;
+        color: #4c4c4c;
         font-weight: 300;
     }
 
@@ -166,7 +166,9 @@
     }
 </style>
 <div class="container">
-    <div class="header">
+    <div class="header" style="display: flex">
+        <img src="35_bazlur-passport-sized-photo.JPG" style="height: 160px; margin-right: 10px" />
+        <div>
         <div class="full-name">
             <span class="first-name">Bazlur</span>
             <span class="last-name">Rashid</span>
@@ -181,9 +183,10 @@
 
         <div class="about">
             <span class="position">Full Stack Software Engineer </span>
-            <span class="desc">
+            <p class="desc" style="line-height: 20px !important; text-align: justify">
         Over the last 12+ years, I have been professionally working as a full stack web developer in software industries. I have strong professional working experience in Ruby On Rails, Laravel, Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL.
-      </span>
+      </p>
+        </div>
         </div>
     </div>
     <div class="details">
