--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </style>
 <div class="container">
     <div class="header" style="display: flex">
-        <img src="/images/35_bazlur-passport-sized-photo.JPG" style="height: 160px; margin-right: 10px" />
+        <img src="https://bazlur36.github.io/images/35_bazlur-passport-sized-photo.JPG" style="height: 160px; margin-right: 10px" />
         <div>
         <div class="full-name">
             <span class="first-name">Bazlur</span>
