--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         .header {
             flex-direction: column;
         }
+
         .header img {
             width: max-content;
             margin-bottom: 10px;
@@ -180,6 +181,7 @@
             flex-direction: column;
             display: flex;
         }
+
         .details .skills__item .right {
             width: 100%;
             text-align: left;
@@ -188,26 +190,29 @@
 </style>
 <div class="container">
     <div class="header" style="display: flex">
-        <img src="https://bazlur36.github.io/images/35_bazlur-passport-sized-photo.JPG" style="height: 160px; margin-right: 10px" />
+        <img src="https://bazlur36.github.io/images/35_bazlur-passport-sized-photo.JPG"
+             style="height: 160px; margin-right: 10px"/>
         <div>
-        <div class="full-name">
-            <span class="first-name">Bazlur</span>
-            <span class="last-name">Rashid</span>
-        </div>
-        <div class="contact-info">
-            <span class="email">Email: </span>
-            <span class="email-val">mailtobazlur@gmail.com</span>
-            <span class="separator"></span>
-            <span class="phone">Phone: </span>
-            <span class="phone-val">+8801912923465</span>
-        </div>
+            <div class="full-name">
+                <span class="first-name">Bazlur</span>
+                <span class="last-name">Rashid</span>
+            </div>
+            <div class="contact-info">
+                <span class="email">Email: </span>
+                <span class="email-val">mailtobazlur@gmail.com</span>
+                <span class="separator"></span>
+                <span class="phone">Phone: </span>
+                <span class="phone-val">+8801912923465</span>
+            </div>
 
-        <div class="about">
-            <span class="position">Full Stack Software Engineer </span>
-            <p class="desc" style="line-height: 20px !important; text-align: justify">
-        Over the last 12+ years, I have been professionally working as a full stack web developer in software industries. I have strong professional working experience in Ruby On Rails, Laravel, Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL.
-      </p>
-        </div>
+            <div class="about">
+                <span class="position">Full Stack Software Engineer </span>
+                <p class="desc" style="line-height: 20px !important; text-align: justify">
+                    Over the last 12+ years, I have been professionally working as a full stack web developer in
+                    software industries. I have strong professional working experience in Ruby On Rails, Laravel,
+                    Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL.
+                </p>
+            </div>
         </div>
     </div>
     <div class="details">
@@ -269,27 +274,7 @@
 
             </div>
         </div>
-        <div class="section">
-            <div class="section__title">Education</div>
-            <div class="section__list">
-                <div class="section__list-item">
-                    <div class="left" style="width: 100%">
-                        <div class="name">BSc in Computer Science and Engineering</div>
-                        <div class="addr">Khulna University of Engineering & Technology, Bangladesh</div>
-                        <div class="duration">March 2003 - March 2007</div>
-                    </div>
-                </div>
 
-                <div class="section__list-item">
-                    <div class="left" style="width: 100%">
-                        <div class="name">MBA in Management Information Systems</div>
-                        <div class="addr">University of Dhaka, Bangladesh</div>
-                        <div class="duration">Jan 2009 - Aug 2010</div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
         <div class="section">
             <div class="section__title">Recent Projects</div>
             <div class="section__list">
@@ -489,7 +474,28 @@
 
                 </div>
             </div>
-<div class="skills__item">
+            <div class="section">
+                <div class="section__title">Education</div>
+                <div class="section__list">
+                    <div class="section__list-item">
+                        <div class="left" style="width: 100%">
+                            <div class="name">BSc in Computer Science and Engineering</div>
+                            <div class="addr">Khulna University of Engineering & Technology, Bangladesh</div>
+                            <div class="duration">March 2003 - March 2007</div>
+                        </div>
+                    </div>
+
+                    <div class="section__list-item">
+                        <div class="left" style="width: 100%">
+                            <div class="name">MBA in Management Information Systems</div>
+                            <div class="addr">University of Dhaka, Bangladesh</div>
+                            <div class="duration">Jan 2009 - Aug 2010</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="skills__item">
                 <div class="left">
                     <div class="name">
                         GIT
@@ -548,7 +554,8 @@
                     <label for="ck5"></label>
 
                 </div>
-            </div><div class="skills__item">
+            </div>
+            <div class="skills__item">
                 <div class="left">
                     <div class="name">
                         PHP
@@ -586,11 +593,16 @@
             </div>
             <div class="section__list">
                 <div class="section__list-item" style="margin-bottom: 5px">
-                    <a href="https://www.linkedin.com/in/bazlurrashid/" target="_blank"><i class="fab fa-linkedin"></i> https://www.linkedin.com/in/bazlurrashid</a>
-                </div><div class="section__list-item" style="margin-bottom: 5px">
-                    <a href="https://github.com/bazlur36" target="_blank"><i class="fab fa-github"></i> https://github.com/bazlur36</a>
-                </div><div class="section__list-item" style="margin-bottom: 5px">
-                    <a href="https://www.facebook.com/bazlur.rashid" target="_blank"><i class="fab fa-facebook-f"></i> https://www.facebook.com/bazlur.rashid</a>
+                    <a href="https://www.linkedin.com/in/bazlurrashid/" target="_blank"><i class="fab fa-linkedin"></i>
+                        https://www.linkedin.com/in/bazlurrashid</a>
+                </div>
+                <div class="section__list-item" style="margin-bottom: 5px">
+                    <a href="https://github.com/bazlur36" target="_blank"><i class="fab fa-github"></i>
+                        https://github.com/bazlur36</a>
+                </div>
+                <div class="section__list-item" style="margin-bottom: 5px">
+                    <a href="https://www.facebook.com/bazlur.rashid" target="_blank"><i class="fab fa-facebook-f"></i>
+                        https://www.facebook.com/bazlur.rashid</a>
                 </div>
             </div>
         </div>
