--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
             width: 100%;
             text-align: left;
         }
+
+        .header .full-name {
+            font-size: 32px;
+        }
     }
     @media (max-width: 380px) {
         .section__list-item {
