--- a/index.html
+++ b/index.html
@@ -224,9 +224,7 @@
             <div class="about">
                 <span class="position">Full Stack Software Engineer </span>
                 <p class="desc" style="line-height: 20px !important; text-align: justify">
-                    Over the last 12+ years, I have been professionally working as a full stack web developer in
-                    software industries. I have strong professional working experience in Ruby On Rails, Laravel,
-                    Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL.
+                    Over the last 12+ years, I have been professionally working as a full stack web developer in software industries. I have strong professional working experience in Ruby On Rails, Laravel, Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL, and Java frameworks (Spring Boot, JAX-RS) for developing APIs.
                 </p>
             </div>
         </div>
@@ -353,6 +351,39 @@
                     <input id="ck2" type="checkbox" checked/>
                     <label for="ck1"></label>
                     <input id="ck2" type="checkbox" checked/>
+
+
+                    <label for="ck4"></label>
+                    <input id="ck5" type="checkbox"/>
+                    <label for="ck5"></label>
+
+                </div>
+            </div>
+            <div class="skills__item">
+                <div class="left">
+                    <div class="name">
+                        JAVA
+                    </div>
+                </div>
+                <div class="right">
+                    <input id="ck1" type="checkbox" checked/>
+
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox" checked/>
+                    <label for="ck1"></label>
+                    <input id="ck2" type="checkbox"/>
 
 
                     <label for="ck4"></label>
