--- a/index.html
+++ b/index.html
@@ -637,8 +637,9 @@
         </div>
 
 
-
-        
+        <div style="page-break-before: always;"></div>
+        <br />
+        <br />
         <div class="section">
             <div class="section__title">
                 Links
