jave exp removed

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="about">
                 <span class="position">Full Stack Software Engineer </span>
                 <p class="desc" style="line-height: 20px !important; text-align: justify">
-                    Over the last 12+ years, I have been professionally working as a full stack web developer in software industries. I have strong professional working experience in Ruby On Rails, Laravel, Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL, and Java frameworks (Spring Boot, JAX-RS) for developing APIs.
+                    Over the last 12+ years, I have been professionally working as a full stack web developer in software industries. I have strong professional working experience in Ruby On Rails, Laravel, Drupal, Wordpress, ReactJS, Responsive Layouts, PostgreSQL.
                 </p>
             </div>
         </div>
@@ -362,7 +362,7 @@
             <div class="skills__item">
                 <div class="left">
                     <div class="name">
-                        JAVA
+                        Laravel
                     </div>
                 </div>
                 <div class="right">
