dearbrightly project added

--- a/index.html
+++ b/index.html
@@ -304,6 +304,14 @@
                 </div>
 
                 <div class="section__list-item">
+                    <div class="name"><a href="https://dam.robi.com.bd" target="_blank">DearBrightly</a>
+                    </div>
+                    <div class="text"> Developed Ruby on Rails backend APIs for a telehealth platform specializing in skincare. Integrated third-party services like DoseSpot and Curexa to enable prescription generation and order placement, ensuring secure, compliant, and seamless workflows between healthcare providers, pharmacies, and patients.
+
+                    </div>
+                </div>
+
+                <div class="section__list-item">
                     <div class="name"><a href="https://www.uphance.com/" target="_blank">Uphance ERP</a></div>
                     <div class="text">As a Full Stack Ruby on Rails Developer at Uphance, a leading B2B apparel ERP on a
                         SaaS model, I focused on fixing production bugs, adding new features, and collaborating on
