dearbrightly link updated

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 </div>
 
                 <div class="section__list-item">
-                    <div class="name"><a href="https://dam.robi.com.bd" target="_blank">DearBrightly</a>
+                    <div class="name"><a href="https://www.dearbrightly.com/" target="_blank">DearBrightly</a>
                     </div>
                     <div class="text"> Developed Ruby on Rails backend APIs for a telehealth platform specializing in skincare. Integrated third-party services like DoseSpot and Curexa to enable prescription generation and order placement, ensuring secure, compliant, and seamless workflows between healthcare providers, pharmacies, and patients.
 
