--- a/index.html
+++ b/index.html
@@ -241,8 +241,11 @@
                     </div>
                     <div class="right">
                         <div class="name">Sr. Software Engineer</div>
-                        <div class="desc">Software Development with Ruby on Rails, Laravel, ReactJS, API development,
+                        <div class="desc">
+                            Machine learning with Python, data preprocessing, model training, evaluation, and deployment
+                            Software Development with Ruby on Rails, Laravel, ReactJS, API development,
                             PostgreSQL, MySQL, TDD, jQuery, GIT, Amazon Web Services (AWS), HTML5, CSS3
+                            
                         </div>
                     </div>
                 </div>
