- fountain IT added

--- a/index.html
+++ b/index.html
@@ -235,15 +235,30 @@
             <div class="section__list">
                 <div class="section__list-item">
                     <div class="left">
-                        <div class="name">NG Solutions System Limited</div>
+                        <div class="name">Fountain IT Limited</div>
                         <div class="addr">Adabar, Dhaka</div>
-                        <div class="duration">June 2017 - Current</div>
+                        <div class="duration">Aug 2020 - Current</div>
                     </div>
                     <div class="right">
                         <div class="name">Sr. Software Engineer</div>
                         <div class="desc">
                             Machine learning with Python, data preprocessing, model training, evaluation, and deployment
-                            Software Development with Ruby on Rails, Laravel, ReactJS, API development,
+                            <br>Software Development with Ruby on Rails, Laravel, ReactJS, Redux, Saga Middleware API development,
+                            PostgreSQL, MySQL, TDD, jQuery, GIT, Amazon Web Services (AWS), HTML5, CSS3
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="section__list-item">
+                    <div class="left">
+                        <div class="name">NG Solutions System Limited</div>
+                        <div class="addr">Adabar, Dhaka</div>
+                        <div class="duration">June 2017 - July 2010</div>
+                    </div>
+                    <div class="right">
+                        <div class="name">Sr. Software Engineer</div>
+                        <div class="desc">
+                            <br>Software Development with Ruby on Rails, Laravel, ReactJS, API development,
                             PostgreSQL, MySQL, TDD, jQuery, GIT, Amazon Web Services (AWS), HTML5, CSS3
                             
                         </div>
