--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
                     <div class="right">
                         <div class="name">Sr. Software Engineer</div>
                         <div class="desc">
-                            Machine learning with Python, data preprocessing, model training, evaluation, and deployment
-                            <br>Software Development with Ruby on Rails, Laravel, ReactJS, Redux, Saga Middleware API development,
+                            Software Development with Ruby on Rails, Laravel, ReactJS, Redux, Saga Middleware API development,
                             PostgreSQL, MySQL, TDD, jQuery, GIT, Amazon Web Services (AWS), HTML5, CSS3
                             
                         </div>
